--- a/Topics/3-storage-systems/311-afs.md
+++ b/Topics/3-storage-systems/311-afs.md
@@ -1,46 +1,5 @@
 # Scale and Performance in a Distributed File System (AFS) (1988)  
 
-## Motivation: scale 
-Key problems of original AFS prototype via extensive benchmarking: 
-1. **Path-traversal** costs are too high
-    1. *Fetch* / *Store* request: pass entire pathname 
-    2. CPU time simply walking down directory paths when there’re too many clients 
-2. The client issues **too many TestAuth** protocol messages 
-    1. Cache validation (similar to NFS) 
-3. Excessive **context switching** overhead and high virtual memory paging demands 
-4. Server **imbalance**
-
-## Techniques
-
-### Scale 
-**Cache mgmt (callback interface)**: rather than checking with server on each open, AFS client instead cache entries of directories and symbolic links, and assume the cache entries are valid unless notified (_callback_). This reduce the cache validation traffic and reduce loads on server. 
-* Stateful: server keeps track of states, which make crash recovery harder!
-  
-**Name resolution**: move the name resolution from server to client, client walks and maps the pathname to Fid (i.e. <vol #, vnode #, uniquifier>. 
-
-**Server process**: a server process per client did not scale well; instead use a single process to service all clients, use threads instead of processes. 
-
-### Usability 
-Storage representation: instead of pathname, access files by their inode. 
-
-AFS usability changes: 
-* true global namespace to clients and ensure all files were named the same way on all client machines (v.s. NFS)
-* considers security and incorporates mechanisms to authenticate users as well as providing user-managed access control
-* simpler management of servers. 
-
-## Crash recovery 
-Crash recovery is more involved than NFS with the callback mechanism (e.x. may miss callback recall messages during crash). When client recovers, it needs to check with server again. 
-
-Server recovery is also harder, as callbacks are kept in memory. Methods to deal with it can be having server sends message ("don't trust cache!") or client checks with server periodically with heartbeat. NFS server recovery is immediate as it doesn't keep any states. 
-
-## Performance 
-**Whole-file caching in AFS**: good when large files are frequently re-read, as it can serve the files directly from the local disk cache and reduce server load and network latency. 
-* files reads usually went to the local disk cache (and potentially local memory) 
-
-**Block-level caching in NFS**: better in use-cases where only a small subset of a large file is read or modified.
-* NFS can fetch or update only the necessary portions of a file, making it more efficient for workloads involving random or partial file access.
-* Also overwriting existing files is better in NFS, as it avoids the initial read operation that AFS requires to fetch the whole file before overwriting.
-
 # The Andrew File System (AFS)
 
 ## Introduction 
@@ -51,13 +10,9 @@ Server recovery is also harder, as callbacks are kept in memory. Methods to deal
     - NFS cache consistency is hard to describe: depends on low-level implementation details
         - E.x. client-side cache timeout intervals
     - In AFS: when the file is opened, a client will generally receive the latest consistent copy from the server.
-    - ![alt text](image-28.png)
+    - ![alt text](images/311-afs/afs-api.png)
 
 ## AFSv1
-
-- Basic tenets of AFS: **whole-file cache** on **local disk** of client machine when accessing a file
-    - Upon `close()`, the file (if modified) is flushed back to the server
-    - V.s. NFS: caches blocks, and does so in client memory (not local disk)
 
 - Details
     - Upon `open()` call
@@ -114,7 +69,48 @@ There are two main problems with AFSv1:
     - Benefit: second access as fast as accessing the file locally (no server interaction)
   
 - For example, if a client accessed the file /home/remzi/notes.txt, and home was the AFS directory mounted onto / (i.e., / was the local root directory, but home and its children were in AFS), the client would first Fetch the directory contents of home, put them in the local-disk cache, and set up a callback on home. Then, the client would Fetch the directory thus ensuring that the server would notify the client of a change in its cached state. 
-- 
+
+## Motivation: scale 
+Key problems of original AFS prototype via extensive benchmarking: 
+1. **Path-traversal** costs are too high
+    1. *Fetch* / *Store* request: pass entire pathname 
+    2. CPU time simply walking down directory paths when there’re too many clients 
+2. The client issues **too many TestAuth** protocol messages 
+    1. Cache validation (similar to NFS) 
+3. Excessive **context switching** overhead and high virtual memory paging demands 
+4. Server **imbalance**
+
+## Techniques
+
+### Scale 
+**Cache mgmt (callback interface)**: rather than checking with server on each open, AFS client instead cache entries of directories and symbolic links, and assume the cache entries are valid unless notified (_callback_). This reduce the cache validation traffic and reduce loads on server. 
+* Stateful: server keeps track of states, which make crash recovery harder!
+  
+**Name resolution**: move the name resolution from server to client, client walks and maps the pathname to Fid (i.e. <vol #, vnode #, uniquifier>). 
+
+**Server process**: a server process per client did not scale well; instead use a single process to service all clients, use threads instead of processes. 
+
+### Usability 
+Storage representation: instead of pathname, access files by their inode. 
+
+AFS usability changes: 
+* true global namespace to clients and ensure all files were named the same way on all client machines (v.s. NFS)
+* considers security and incorporates mechanisms to authenticate users as well as providing user-managed access control
+* simpler management of servers. 
+
+## Crash recovery 
+Crash recovery is more involved than NFS with the callback mechanism (e.x. may miss callback recall messages during crash). When client recovers, it needs to check with server again. 
+
+Server recovery is also harder, **as callbacks are kept in memory. Methods to deal with it can be having server sends message ("don't trust cache!") or client checks with server periodically with heartbeat**. NFS server recovery is immediate as it doesn't keep any states. 
+
+## Performance 
+**Whole-file caching in AFS**: good when large files are frequently re-read, as it can serve the files directly from the local disk cache and reduce server load and network latency. 
+* files reads usually went to the local disk cache (and potentially local memory) 
+
+**Block-level caching in NFS**: better in use-cases where only a small subset of a large file is read or modified.
+* NFS can fetch or update only the necessary portions of a file, making it more efficient for workloads involving random or partial file access.
+* Also overwriting existing files is better in NFS, as it avoids the initial read operation that AFS requires to fetch the whole file before overwriting.
+
 
 
 ### Cache Consistency 
@@ -133,31 +129,11 @@ Two important cases:
 ### Crash Recovery 
 
 - More involved with NFS, where clients hardly noticed a server crash
-- Scenario: S cannot content some C1 for a while, but send the callback messages
+- Scenario: S cannot contact some C1 for a while, but send the callback messages
 - Scenario: S crashes, and callbacks are kept in memory
 - Some approach
-    - Server send a message when it is up and running again
+    - Server send a message (hey server, is my file still latest) when it is up and running again
     - Clients check server is alive periodically (via heartbeat)
-
- For example, imagine there is a short period of time where a server (S) is not able to contact a client (C1), for example, while the client C1 is rebooting. While C1 is not available, S may have tried to send it one or more callback recall messages; for example, imagine C1 had file F cached on its local disk, and then C2 (another client) updated F, thus causing S to send messages to all clients caching the file to remove it from their local caches. Because C1 may miss those critical messages when it is rebooting, upon rejoining the system, C1 should treat all of its cache contents as suspect. Thus, upon the next access to file F, C1 should first ask the server (with a TestAuth protocol message) whether its cached copy of file F is still valid; if so, C1 can use it; if not, C1 should fetch the newer version from the server.
-
-
-- Observation
-    - In many cases, performance of each system is roughly the same
-        - Note: writing to disk buffered, reading from disk cached
-    - Interesting difference: large-file sequential re-read
-        - Workload 6
-        - Read from disk cache v.s read remote
-        - NFS also increase server load, limited in scale
-    - Sequential writes should perform similarly
-        - Workload 8, 9
-    - AFS performs worse on sequential file overwrites
-        - Workload 10
-        - Overwrite for AFS: first fetches the old file entirely, subsequently overwrite
-        - Overwrite for NFS: simply overwrite blocks and avoid initial useless read
-    - Workloads that access a small subset of data within large files perform much better on NFS than AFS
-        - Workloads 7, 11
-        - NFS, as a block-based protocol, performs I/O that is proportional to size of R/W
 
 ## Other Improvements on AFS
 
@@ -168,14 +144,7 @@ Two important cases:
 - Flexible user-managed access control (e.x. who exactly can access which files)
     - V.s. NFS: much less support for this type of sharing
 - Tools to enable simpler management of servers for system admins
-
-Sadly, NFS dominates the market place and becomes an open standard. NFSv4 now also adds server state (e.g. an “open” protocol message).
-
-
-Because AFS has a large local disk cache, it will
-access the file from there when the file is accessed again. NFS, in contrast,
-only can cache blocks in client memory; as a result, if a large file (i.e., a file
-bigger than local memory) is re-read, the NFS client will have to re-fetch
-the entire file from the remote server
-
-NFS: flush on close consistency.
+- Sadly, NFS dominates the market place and becomes an open standard. NFSv4 now also adds server state (e.g. an “open” protocol message).
+- Because AFS has a large local disk cache, it will
+access the file from there when the file is accessed again. NFS, in contrast, only can cache blocks in client memory; as a result, if a large file (i.e., a file bigger than local memory) is re-read, the NFS client will have to re-fetch the entire file from the remote server
+- NFS: flush on close consistency.
