--- a/Topics/4-distributed-systems/410-vr.md
+++ b/Topics/4-distributed-systems/410-vr.md
@@ -1,4 +1,11 @@
 # Viewstamp Replication 
+
+Deep dive: https://blog.brunobonacci.com/2018/07/15/viewstamped-replication-explained/#fn:3
+
+Paper: https://pmg.csail.mit.edu/papers/vr.pdf
+
+Read: July 3rd. 
+
 Viewstamp Replication is a replication protocol developed in 1980's to handle failures in which nodes fail by crashing. 
 
 ## Goals of VR design 
@@ -18,6 +25,8 @@ Replica group of size **$2f+1$**
 *   Able to carry request without $f$ replicas participating
 *   But worst case, $f$ can just be slow
 *   Need $f+1$ other replicas to ensure at least one executed request and didn't fail subsequently 
+*   A quorum is $f+1$ nodes. It is not possible to have a quorum with less than 3 nodes. 
+*   ![replica-anatomy](images/410-vr/replica-anatomy.png)
 
 ### Requirements 
 1. Every op executed by the replica group survices into the future in spite of up to $f$ failures 
@@ -26,7 +35,9 @@ Replica group of size **$2f+1$**
 ### Approach 
 * Primary: decide order for client requests
     *  also execute and return results to cleint after $f+1$ (self-includedd) replicas know about the request
-* Client: monitor primary failures, initiate _view_ change if needed
+* Client: 
+    * **Only communicates with the primary.**
+    * monitor primary failures, initiate _view_ change if needed
     *  **view**: one of the replicas is selected to be the primary
     *  Goal (view-change): if primary fails, need to elect new replica to be primary 
 
@@ -35,32 +46,31 @@ _Reasoning_:
 * Primary execute after hear back from $f+1$ ensures that even if $f$ replicas fail, the protocol continues to execute.
 * However, primary itself can fail. So the view change protocol is for masking the failures of the primary. 
 
-| Notion | Definition                                                                |
-| ------ | ------------------------------------------------------------------------- |
-| $c$    | client-id                                                                 |
-| $v$    | view number                                                               |
-| $m$    | msg received from client                                                  |
-| _op_   | operation client wants to run                                             |
-| _log_  | array of _op-numbers_, contain requests received so far in assigned order |
-| $n$    | op-number assigned to request                                             |
-| $i$    | replica number                                                            |
-| $l$    | replica log                                                               |
-
 ### #1: Normal Operation Protocol 
-<img width="579" alt="image" src="https://github.com/lynnliu030/os-prelim/assets/39693493/23dcbb8e-c1b2-48ee-ad19-f1405a15bafd">
 
-
-1. Client sends <REQUEST _op_, $c$, $s$, $v$ > to primary
-2. Primary advances _op-number_ and adds request to end of the _log_, then it sends < $PREPARE$, $m$, $v$, $n$ > to other replicas
-3. Non-primary replicas process $PREPARE$ message in order, wait until it has all eariler requests in its _log_, then append and send < $PREPAREOK$, $v$, $n$, $i$ > to primary
-4. Primary waits for $f$ $PREPAREOK$ message from different replicas, then it's considered as committed. Primary executes this request until all previous requests are executed and send < $REPLY$, $v$, $s$, $x$ > to the client where $x$ is the result
-5. Primary inform other replicas about commit either through piggy-backed information or send directly, secondary then commits in order
+1. Client sends `<REQUEST, client-id, request #, op>` to primary
+2. Primary advances op-num (with the new op) and adds request to end of the _log_, then it sends `<PREPARE, view-num, op-num, commit-num, message (client request itself)>` to other replicas
+3. Non-primary replicas process $PREPARE$ message in order. It will check its `view-num` to see if it itself is up-to-date, or the other replica is not up-to-date. It will wait until it has all eariler requests in its _log_ (otherwise enter recovery state). 
+   1. If everything is fine, it will increment its `op-num`, appends the operation to the `op-log`, and update the client table.
+   2. Send `<PREPARE-OK, view-num, op-num, replica-identity>` to primary
+   3. Since there is no gap, sending a PREPARE-OK means all previous operatoins have been prepared. 
+4. Primary waits for $f+1$ (including itself) PREPARE_OK message from different replicas, at which point it knows that a **quorum** of nodes know about the operation, it's considered as committed. 
+   1. Performs the client operation.
+   2. Primary increment its `commit-num`.
+   3. Update the client table with the operation results.
+   4. Primary executes this request until all previous requests are executed and send `<REPLY, view-num, request-num, response>` to the client
+5. Primary inform other replicas about commit either through piggy-backed information or send directly, secondary then commits in order. 
+   1. E.g. piggypack on the next PREPARE message. 
+   2. Alternatively, a `<COMMIT, view-num, commit-num>`. 
+   3. In either case, a replica will execute all operation in their op-log between the last `commit-num` and the `commit-num` in the `<COMMIT>` message strictly following the order of operations and advance its commit-num as well.
+6. Heartbeat:
+   1. `<PREPARE>` and `<COMMIT>` act as heartbeat for the primary. 
 
 ### #2: View Change Protocol 
-* The system moves through a sequence of views
+* The view change protocol is used when **one of the replicas** detects that the current primary is unavailable and it proceeds to inform the rest of the ensemble. 
+  * Detected as there is no heartbeat -> timeout. 
+* Uses a sorted list of IPs to determine who is the next primary node, in a *round-robin* fashion.
 * In each **view** one of the replicas is selected to be the primary
-* View changes are used to mask failures of the primary
-* The correctness condition: every committed operation survives into all subsequent views in the same position in the serial order
 * View change protocol must obtain information from logs of at least $f+1$ replica
     * Ensure all **committed** operations will be known (i.e. recorded in at least one of these logs)
 * **Viewstamps: < _view-number_, _op-number_>** 
@@ -69,20 +79,36 @@ _Reasoning_:
 *  Once a node advances _view-number_ it no longer accepts messages from old view, instead it informs senders about new view 
  
 Steps:
-1. Replica $i$ suspects primary is faulty, advances its _view-number_, set its status to _view-change_, and send < $DOVIEWCHANGE$, $v$, $l$, $k$, $i$ > to the new primary
-   *  Not accept any $PREPARE$ message from old primary 
+1. Replica $i$ suspects primary is faulty, advances its _view-number_, set its status to _view-change_, and send `<START-VIEW-CHANGE, view-number, idenity >` to the new **primary**
+   *  Not accept any `PREPARE` message from old primary
+2. When the other replicas receive a `<START-VIEW-CHANGE>` message with a `view-num` bigger than the one they have, they set their status to `view-change` and set the `view-num` to the view number in the message and reply with `<START-VIEW-CHANGE>` to all replicas. 
 2. When new primary receives $f+1$ messages
-   *  Set new log = the _most recent_ of those messages (i.e. with the largest viewstamp).
-   *  Set _op-number_ to latest entry in new _log_
+   *  Set new log = the _most recent_ of those messages (i.e. with the largest viewstamp), and the largest log. 
+   *  Set `op-number` to latest entry in new _log_
    *  Change status to _normal_
-   *  Inform other replicas completion of view change by sending < $STARTVIEW$ $v$, $l$, $k$ >
+   *  Inform other replicas completion of view change by sending `<START_VIEW, view-num, op-log, op-num, commit-num>`
        *  $l$ is the new log and $k$ is the _op-number_ of latest committed request
 3. The new primary execute (in order) any committed operations that it hadn't executed previously and send replies to clients, start accepting client request
-4. Other replicas receiving $STARTVIEW$ will
-   *  **replace their log with the new lo**g, set their _op-number_, _view-number_, and change their status to _normal_
+4. Other replicas receiving `STARTVIEW` will
+   *  **replace their log with the new log**, set their `op-number`, `view-num`, and change their status to `normal`.
    *  send $PREPAREOK$ messages for uncommitted ops 
 
 ### #3: Recovery Protocol 
-1. Replica $i$ sends a < $RECOVERY$, $v$, $r$ > nessage to all other replicas, where $v$ is its starting _view-number_
-2. Replica $i$ replies < $RECOVERY$ $RESPONSE$ $v$, $l$, $k$, $i$ > only when its status is $normal$ and its _view-number_ is greater than $v$, and is primary of its view.
-3. Replica waits to receive response, then update its state. And send $PREPAREOK$ message for uncommitted ops. 
+1. Replica $i$ sends a `<GET_STATE, view-num, op-num, commit-num, identity>` nessage to any of other replicas. 
+   1. The values are current values. 
+2. If view number is different, replica $i$ replies `<NEW_STATE, view-num, commit-num, op-num, portions of log between the commit-num in GET_STATE and its op-num>` 
+   1. only when its status is $normal$ and its _view-number_ is greater than $v$, and is primary of its view.
+3. Replica waits to receive response, then update its state. And send `PREPARE-OK` message for uncommitted ops. 
+
+
+### Optimizations
+
+1. Sending log content can be inefficient. 
+   1. Storing the internal replica state into a durable storage can speed up the recovery in the event the process is crashed or restarted.
+2. Primary and client can be cut in the same partition, whereas other replicas have moved on to the new views. 
+   1. The "old primary" can serve stale data.
+   2. Solution is to use lease. 
+3. If the clients can accept stale reads, then read-only requests can be made directly to the follower replicas.
+   1. For example the client is connecting to the primary and ask for a write operation such as a registry increment (write a = a + 1), the primary will process the request as usual, but along with the response it will communicate the operation number (op-num) for this request. The client records the op-num and it uses to make subsequent requests to the follower replicas for a read-only request. The replica, if it hasn’t processed the operation in the client request op-num it will have to wait until it the primary communicate that it is safe to do so and then reply.
+
+LImitation: ensemble reconfiguration. 
