Update notes with the latest paper read

--- a/3-storage-systems/311-afs.md
+++ b/3-storage-systems/311-afs.md
@@ -2,13 +2,17 @@
 
 # The Andrew File System (AFS)
 
+Link: https://www.cs.cmu.edu/~coda/docdir/s11.pdf
+
+Read: July 12th, 2024
+
 ## Introduction 
 
 - How does it differ from NFS?
     - NFS is limited in scalability
         - E.x. frequent check if cache contents change
     - NFS cache consistency is hard to describe: depends on low-level implementation details
-        - E.x. client-side cache timeout intervals
+        - E.x. **client-side cache timeout intervals**
     - In AFS: when the file is opened, a client will generally receive the latest consistent copy from the server.
     - ![alt text](images/311-afs/afs-api.png)
 
@@ -17,7 +21,7 @@
 - Details
     - Upon `open()` call
         - Client sends a *Fetch* protocol message to server with entire pathname (e.x. `/home/remzi/notes.txt`)
-        - Server traverses the pathname, finds the desired file, and ships the file back to client
+        - Server traverses the pathname, finds the desired file, and **ships the file** back to client
         - Client caches the file on local disk
             - Consecutive R/W: also uses local memory to cache blocks on its local disk
         - When finish
@@ -37,7 +41,7 @@ There are two main problems with AFSv1:
 
 1. **Path-traversal costs are too high**
     1. *Fetch* / *Store* request: pass entire pathname 
-    2. CPU time simply walking down directory paths when there’re too many clients 
+    2. **CPU time simply walking down directory paths when there’re too many clients**
     3. Server spends too much time traversing pathnames
 2. **The client issues too many TestAuth protocol messages** 
     1. Just like NFS problem 
@@ -47,13 +51,15 @@ There are two main problems with AFSv1:
     2. Server used a single distinct process per **client** thus inducing **context switching** and other overheads 
         1. Sol: building the server with threads instead of processes
 
+* Venus: client workstation. Vice: set of storage servers. 
+
 ## AFSv2
 
 ### #1: Callback
 
 - AFSv2 introduce **callback** to reduce # of client / server interactions, adding this **state** to the system
 - Client assumes that the file is valid until server tells it
-- Analogy to: pulling v.s interrupts
+- Analogy to: **pulling v.s interrupts**
 
 ### #2: FID
 
@@ -61,6 +67,7 @@ There are two main problems with AFSv1:
     - Volume identifier
     - File identifier
     - “Uniquifier”: to enable reuse of the volume and file IDs when a file is deleted
+- Each Vice file or directory is now identified by a unique fixed-length Fid. Each entry in a directory maps a component of a pathname to a fid. 
 - FID replaces pathnames to specify which file a client was interested in
     - Client walk the pathname, caching the results
     - Example
@@ -69,6 +76,11 @@ There are two main problems with AFSv1:
     - Benefit: second access as fast as accessing the file locally (no server interaction)
   
 - For example, if a client accessed the file /home/remzi/notes.txt, and home was the AFS directory mounted onto / (i.e., / was the local root directory, but home and its children were in AFS), the client would first Fetch the directory contents of home, put them in the local-disk cache, and set up a callback on home. Then, the client would Fetch the directory thus ensuring that the server would notify the client of a change in its cached state. 
+
+### LWP
+
+* User-level mechanism to support multiple nonpreemptive Lightweight Processes (LWPs) 
+* An LWP is bound to a particular client only for the duration of a single server operation. A client thus has long-term state on a server but not a corresponding thread of control associated with it. 
 
 ## Motivation: scale 
 Key problems of original AFS prototype via extensive benchmarking: 
@@ -83,7 +95,7 @@ Key problems of original AFS prototype via extensive benchmarking:
 ## Techniques
 
 ### Scale 
-**Cache mgmt (callback interface)**: rather than checking with server on each open, AFS client instead cache entries of directories and symbolic links, and assume the cache entries are valid unless notified (_callback_). This reduce the cache validation traffic and reduce loads on server. 
+**Cache mgmt (callback interface)**: rather than checking with server on each open, AFS client instead cache entries of directories and symbolic links, and assume the cache entries are valid unless notified (_callback_). This reduce the cache invalidation traffic and reduce loads on server. 
 * Stateful: server keeps track of states, which make crash recovery harder!
   
 **Name resolution**: move the name resolution from server to client, client walks and maps the pathname to Fid (i.e. <vol #, vnode #, uniquifier>). 
@@ -105,6 +117,8 @@ Server recovery is also harder, **as callbacks are kept in memory. Methods to de
 
 ## Performance 
 **Whole-file caching in AFS**: good when large files are frequently re-read, as it can serve the files directly from the local disk cache and reduce server load and network latency. 
+  * whole-file transfer approach contacts servers only on opens and closes. Read and write operations, which are far more numerous, are transparent to servers and cause no network traffic.
+  * Caching of entire files simplifies cache management. Venus only has to keep track of the tiles in its cache, not of their individual pages.
 * files reads usually went to the local disk cache (and potentially local memory) 
 
 **Block-level caching in NFS**: better in use-cases where only a small subset of a large file is read or modified.
@@ -148,3 +162,10 @@ Two important cases:
 - Because AFS has a large local disk cache, it will
 access the file from there when the file is accessed again. NFS, in contrast, only can cache blocks in client memory; as a result, if a large file (i.e., a file bigger than local memory) is re-read, the NFS client will have to re-fetch the entire file from the remote server
 - NFS: flush on close consistency.
+
+### Volume
+
+* A Volume is a collection of files forming a partial subtree of the Vice name space.
+* Quotas are implemented in this system on a per volume basis. Each user of the system is assigned a volume, and each volume is assigned a quota. 
+* Volumes form the basis of the backup and restoration mechanism in our redesign. To backup a volume, a read-only clone is first made, thus creating a frozen snapshot of those files. 
+* Volumes provide a level of Operational Transparency that is not sup- ported by any other file system we are aware of. From an operational standpoint, the system is a flat space of named volumes. The file system hierarchy is constructed out of volumes but is orthogonal to it.
